--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "seed": "node ./db/seeds/run-seed.js",
     "test": "jest",
     "prepare": "husky install",
-    "start": "nodemon node db/listen.js"
+    "start": "nodemon node express-app/listen.js"
   },
   "repository": {
     "type": "git",
