--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "setup-dbs": "psql -f ./db/setup.sql",
     "seed": "node ./db/seeds/run-seed.js",
     "test": "jest",
-    "prepare": "husky install",
-    "start": "nodemon node express-app/listen.js"
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -30,7 +29,6 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.21.1",
-    "nodemon": "^3.1.7",
     "pg": "^8.7.3",
     "supertest": "^7.0.0"
   },
